# danilas_python_playground

./: README.md  pyproject.toml
first_package/: add_prefix.py  add_two_numbers.py  agreg.py  calculate_average.py  change_list.py  compact.py  normalize_emails.py  out_of_range_exercise.py  parity.py  yandex_exam_1.py  yandex_exam_2.py
tests/: test_agreg.py  test_calculate_average.py  test_change_list.py  test_compact.py  test_normalize_emails.py  test_out_of_range_exercise.py  test_parity.py  test_yandex_exam.py  test_yandex_exam_2.py
